5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_1015.log
== TEST (2019-03-22 23:18:15) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:18:27) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:18:35) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:18:44) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:20:51) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
print(max(a,b,c))
print(min(a,b,c))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:20:59) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
print(max(a,b,c))
print(min(a,b,c))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:21:04) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
print(max(a,b,c))
print(min(a,b,c))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.184961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:23:15) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:23:21) 
-- CODE:
a = int(input(4))
b = int(input(7))
c - int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.204103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 3, in <module>
    c - int(input(5))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:29:13) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:29:22) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:29:28) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:29:35) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 23:29:41) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:29:46) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(a,b,c))
print(a + b + c)- a - b
print(max(a,b,c))


-- EXECUTION TIME:
0.20431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 5, in <module>
    print(a + b + c)- a - b
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 23:31:05) 
-- CODE:
a = int(input(4))
b = int(input(7))
c = int(input(5))
print(min(4,7,5))
print(4 + 7 + 5)- 4 - 7
print(max(4,7,5))


-- EXECUTION TIME:
0.229545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 5, in <module>
    print(4 + 7 + 5)- 4 - 7
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:30:11) 
-- CODE:
int(input(2,5,7))

print(min(a,b,c))
print(a + b + c)- 4 - 7
print(max(4,7,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    int(input(2,5,7))
TypeError: input expected at most 1 arguments, got 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:31:20) 
-- CODE:
int(input(2))
int(input(4))
int(input(6))

print(min(a,b,c))
print(a + b + c)- 4 - 7
print(max(4,7,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(min(a,b,c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:31:29) 
-- CODE:
int(input(2))
int(input(4))
int(input(6))

print(min(a,b,c))
print(a + b + c)- 4 - 7
print(max(4,7,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(min(a,b,c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 19:32:44) 
-- CODE:
int(input(2))
int(input(4))
int(input(6))

print(min(2,4,6))
print(2 + 4 + 6) - 2 - 6
print(max(2,4,6))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(2 + 4 + 6) - 2 - 6
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:32:50) 
-- CODE:
int(input(2))
int(input(4))
int(input(6))

print(min(2,4,6))
print(2 + 4 + 6) - 2 - 6
print(max(2,4,6))


-- EXECUTION TIME:
0.138292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 6, in <module>
    print(2 + 4 + 6) - 2 - 6
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 19:32:55) 
-- CODE:
int(input(2))
int(input(4))
int(input(6))

print(min(2,4,6))
print(2 + 4 + 6) - 2 - 6
print(max(2,4,6))


-- EXECUTION TIME:
0.121354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1015/main.py", line 6, in <module>
    print(2 + 4 + 6) - 2 - 6
TypeError: unsupported operand type(s) for -: 'NoneType' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:24:37) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:25:02) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- EXECUTION TIME:
0.148291
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:25:08) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:25:38) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- EXECUTION TIME:
0.173837
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:35) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:26:52) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- EXECUTION TIME:
0.133666
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:29:17) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - nr1 - nr3)
print(max(nr1,nr2,nr3))


-- OUTPUT:
-2
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:32:30) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))
a = int(input(min(nr1,nr2,nr3)))
b = int(input(max(nr1,nr2,nr3)))

print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - a - b)
print(max(nr1,nr2,nr3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input(min(nr1,nr2,nr3)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:33:08) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))
a = int(input(min(nr1,nr2,nr3)))
b = int(input(max(nr1,nr2,nr3)))
print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - a - b)
print(max(nr1,nr2,nr3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input(min(nr1,nr2,nr3)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:33:38) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))
a = int(input(min(nr1,nr2,nr3)))
b = int(input(max(nr1,nr2,nr3)))
print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - a - b)
print(max(nr1,nr2,nr3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input(min(nr1,nr2,nr3)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:34:14) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))
a = (min(nr1,nr2,nr3))
b = (max(nr1,nr2,nr3))
print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - a - b)
print(max(nr1,nr2,nr3))

-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:34:35) 
-- CODE:
nr1 = int(input("digite um nr"))
nr2 = int(input("digite um nr"))
nr3 = int(input("digite um nr"))
a = (min(nr1,nr2,nr3))
b = (max(nr1,nr2,nr3))
print(min(nr1,nr2,nr3))
print((nr1 + nr2 + nr3) - a - b)
print(max(nr1,nr2,nr3))

-- EXECUTION TIME:
0.155291
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
